--- a/Dockerfile.server
+++ b/Dockerfile.server
@@ -3,10 +3,12 @@ FROM golang:1.18-alpine AS builder
 WORKDIR /app
 COPY svckit/ ./svckit/
 COPY cmd/server/ ./cmd/server/
+COPY .env ./.env
 WORKDIR /app/cmd/server
 RUN go build -o /app/server
 
 FROM alpine:latest
 WORKDIR /app
 COPY --from=builder /app/server .
+COPY .env ./.env
 ENTRYPOINT ["./server"]
