--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,17 +1,24 @@
-version: "3"
+version: "3.8"
+
 services:
   server:
     build:
       context: .
-      dockerfile: Dockerfile.server
+      dockerfile: server/Dockerfile
     ports:
-      - "8000:8000"
+      - "8080:8080"
+    networks:
+      - halfplexnet
 
   client:
     build:
       context: .
-      dockerfile: Dockerfile.client
+      dockerfile: client/Dockerfile
     depends_on:
       - server
-    env_file:
-      - .env
+    networks:
+      - halfplexnet
+
+networks:
+  halfplexnet:
+    driver: bridge
